@@ -602,12 +602,7 @@ nautilus_icon_container_selection_items_local (NautilusIconContainer *container,
 	/* get the URI associated with the container */
 	container_uri_string = get_container_uri (container);
 	
-	if (eel_uri_is_trash (container_uri_string)) {
-		/* Special-case "trash:" because the nautilus_drag_items_local
-		 * would not work for it.
-		 */
-		result = nautilus_drag_items_in_trash (items);
-	} else if (eel_uri_is_desktop (container_uri_string)) {
+	if (eel_uri_is_desktop (container_uri_string)) {
 		result = nautilus_drag_items_on_desktop (items);
 	} else {
 		result = nautilus_drag_items_local (container_uri_string, items);
